--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugit alias eveniet ad et sed nam laboriosam totam dolores, illum, atque eligendi quibusdam! Exercitationem aperiam nisi dicta culpa nostrum iusto?</p>
 </body>
 </html>
